<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
        android:title="@string/menu_action_search"
        app:showAsAction="always"
        android:icon="@drawable/ic_search_white_24dp"/>

    <item android:id="@+id/action_setting"
        android:title="@string/menu_action_setting"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_settings_white_24dp"/>

    <item android:id="@+id/action_help"
        android:title="@string/menu_action_help"
        app:showAsAction="never"
        android:icon="@drawable/ic_help_white_24dp"/>

    <item android:id="@+id/about"
        android:title="@string/menu_action_about"
        app:showAsAction="never"
        android:icon="@drawable/ic_info_white_24dp"/>

</menu>