<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="group5.ansnewsreader.WeatherFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/color_trending_background">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_weather"
            android:background="@color/color_weather">

            <TextView android:id="@+id/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="@bool/yes"
                android:text="@string/sample_temperature2"/>

            <TextView android:id="@+id/weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="@bool/yes"
                android:layout_below="@id/temperature"
                android:text="@string/partly_cloudy"/>

            <ImageView
                android:layout_width="@dimen/weather_image_width"
                android:layout_height="@dimen/weather_image_height"
                android:layout_centerHorizontal="@bool/yes"
                android:src="@drawable/cloud"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="@bool/yes"
                android:text="@string/paris"/>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/forecast_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_forecast"
                android:background="@color/color_forecast"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="@integer/weight_2"
                        android:gravity="center"
                        android:text="@string/monday"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/forecast_image_height"
                        android:layout_weight="@integer/weight_1"
                        android:src="@drawable/cloud"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="@integer/weight_3"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/partly_cloudy"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sample_temperature1"/>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="@integer/weight_2"
                        android:gravity="center"
                        android:text="@string/tuesday"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/forecast_image_height"
                        android:layout_weight="@integer/weight_1"
                        android:src="@drawable/cloud"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="@integer/weight_3"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/partly_cloudy"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sample_temperature1"/>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="@integer/weight_2"
                        android:gravity="center"
                        android:text="@string/wednesday"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/forecast_image_height"
                        android:layout_weight="@integer/weight_1"
                        android:src="@drawable/cloud"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="@integer/weight_3"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/partly_cloudy"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sample_temperature1"/>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="@integer/weight_2"
                        android:gravity="center"
                        android:text="@string/thursday"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/forecast_image_height"
                        android:layout_weight="@integer/weight_1"
                        android:src="@drawable/cloud"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="@integer/weight_3"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/partly_cloudy"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sample_temperature1"/>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="@integer/weight_2"
                        android:gravity="center"
                        android:text="@string/friday"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/forecast_image_height"
                        android:layout_weight="@integer/weight_1"
                        android:src="@drawable/cloud"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="@integer/weight_3"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/partly_cloudy"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sample_temperature1"/>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="@integer/weight_2"
                        android:gravity="center"
                        android:text="@string/saturday"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/forecast_image_height"
                        android:layout_weight="@integer/weight_1"
                        android:src="@drawable/cloud"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="@integer/weight_3"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/partly_cloudy"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sample_temperature1"/>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="@integer/weight_2"
                        android:gravity="center"
                        android:text="@string/sunday"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/forecast_image_height"
                        android:layout_weight="@integer/weight_1"
                        android:src="@drawable/cloud"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="@integer/weight_3"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/partly_cloudy"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sample_temperature1"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</FrameLayout>
